# axity-laboratory

./: .pre-commit-config.yaml  README.md
advance-level/1.arquitectura-limpia/: README.md  pyproject.toml
advance-level/1.arquitectura-limpia/src/arquitectura_limpia/application/: ports.py
advance-level/1.arquitectura-limpia/src/arquitectura_limpia/application/events/: handlers.py
advance-level/1.arquitectura-limpia/src/arquitectura_limpia/domain/: order.py
advance-level/1.arquitectura-limpia/src/arquitectura_limpia/infrastructure/: fake_uow.py
advance-level/1.arquitectura-limpia/src/arquitectura_limpia/infrastructure/http/: main.py
advance-level/2.empaquetado_distribucion_cicd/: .dockerignore  .gitignore  Dockerfile  README.md  WIKI.md  pyproject.toml
advance-level/2.empaquetado_distribucion_cicd/.github/workflows/: ci.yml
advance-level/2.empaquetado_distribucion_cicd/src/empaquetado_distribucion_cicd/: main.py
advance-level/3.cli_automatizacion/: .gitignore  README.md  WIKI.md  pyproject.toml
advance-level/3.cli_automatizacion/src/cli_automatizacion/: __init__.py  __main__.py  app.py  client.py  config.py
advance-level/4.seguridad_mantenimiento/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  WIKI.md  pyproject.toml
advance-level/4.seguridad_mantenimiento/src/seguridad_mantenimiento/: app.py  config.py
advance-level/4.seguridad_mantenimiento/tests/: test_config.py
advance-level/arquitectura-limpia/: .gitignore  README.md  WIKI.md
fundamental-level/1.entorno-herramientas/: EvidenciaModulo.docx  README.md
fundamental-level/2.fundamentos-lenguaje/: WIKI_LAB.md  bands.json
fundamental-level/3.funciones-programacion-pythonic/: WIKI.md  pyproject.toml
fundamental-level/4.objetos_modelos_datos/: WIKI.md  pyproject.toml
fundamental-level/5.estandar_ES/: WIKI.md  rock_bands.csv
fundamental-level/6.http_apis/: WIKI.md  pyproject.toml
fundamental-level/6.http_apis/src/http_apis/: pokemon_client.py
fundamental-level/entorno-herramientas/: DOC.md  README.md  WIKI.md  pyproject.toml
fundamental-level/entorno-herramientas/src/entorno_herramientas/: main.py
fundamental-level/estandar_ES/: WIKI.md  pyproject.toml
fundamental-level/estandar_ES/output/: rock_bands_metrics.json
fundamental-level/estandar_ES/src/estandar_es/: rock_bands_lab.py
fundamental-level/funciones-programacion-pythonic/: WIKI.md
fundamental-level/objetos_modelos_datos/: WIKI.md  WIKI_2.md  pyproject.toml
fundamental-level/objetos_modelos_datos/src/objetos_modelos_datos/: entities.py  schemas.py
intermediate-level/2.-apis_fastapi/: .gitignore  README.md  pyproject.toml  wiki.md
intermediate-level/2.-apis_fastapi/src/apis_fastapi/app/: main.py
intermediate-level/2.-apis_fastapi/src/apis_fastapi/app/core/: config.py  security.py
intermediate-level/2.-apis_fastapi/src/apis_fastapi/app/db/: init_db.py  session.py
intermediate-level/2.-apis_fastapi/src/apis_fastapi/app/models/: order.py
intermediate-level/2.-apis_fastapi/src/apis_fastapi/app/routers/: auth.py  hello.py  orders.py
intermediate-level/2.-apis_fastapi/src/apis_fastapi/app/schemas/: order.py
intermediate-level/3.pruebas_tdd/: .coverage  .coveragerc  .gitignore  README.md  WIKI.md  pyproject.toml  pytest.ini
intermediate-level/3.pruebas_tdd/.hypothesis/constants/: a1a70ac8fe88a0e4  da39a3ee5e6b4b0d
intermediate-level/3.pruebas_tdd/.hypothesis/tmp/: tmpmyiuvhsq
intermediate-level/3.pruebas_tdd/src/pruebas_tdd/: password_validator.py
intermediate-level/3.pruebas_tdd/tests/: conftest.py  test_password_properties.py  test_password_validator.py
intermediate-level/4.concurrencia_rendimiento/: README.md  WIKI.md  pyproject.toml
intermediate-level/4.concurrencia_rendimiento/src/concurrencia_rendimiento/: fetcher_lab.py
intermediate-level/4.concurrencia_rendimiento/tests/: test_fetcher_lab.py
intermediate-level/5.solid/: WIKI.md  demo.py  pyproject.toml
intermediate-level/5.solid/src/solid/: in_memory_repository.py  sql_repository.py  user_repository.py  user_service.py
intermediate-level/5.solid/tests/: test_lsp.py
intermediate-level/6.patrones/: README.md  WIKI.md  pyproject.toml
intermediate-level/6.patrones/src/patrones/: cache.py  pricing.py  provider.py
intermediate-level/6.patrones/tests/: test_patterns.py
intermediate-level/7.ciencia_datos/: WIKI.md  pyproject.toml
intermediate-level/7.ciencia_datos/data/: flores.csv
intermediate-level/7.ciencia_datos/models/: flores_model.joblib
intermediate-level/7.ciencia_datos/src/ciencia_datos/: clasificador.py
intermediate-level/7.ciencia_datos/tests/: test_clasificador.py
intermediate-level/8.arquitectura_hexagonal/: .gitignore  README.md  WIKI.md  pyproject.toml
intermediate-level/8.arquitectura_hexagonal/src/arquitectura_hexagonal/application/ports/: notification_service.py  order_repository.py
intermediate-level/8.arquitectura_hexagonal/src/arquitectura_hexagonal/application/use_cases/: create_order.py
intermediate-level/8.arquitectura_hexagonal/src/arquitectura_hexagonal/domain/entities/: order.py
intermediate-level/8.arquitectura_hexagonal/src/arquitectura_hexagonal/infrastructure/notifications/: http_notification_adapter.py
intermediate-level/8.arquitectura_hexagonal/src/arquitectura_hexagonal/infrastructure/persistence/: in_memory_order_repository.py  sqlalchemy_order_repository.py
intermediate-level/8.arquitectura_hexagonal/tests/application/: test_create_order.py
intermediate-level/8.arquitectura_hexagonal/tests/domain/: test_order.py
intermediate-level/8.arquitectura_hexagonal/tests/infrastructure/: test_http_notification_adapter.py  test_in_memory_repository.py  test_sqlalchemy_repository.py
intermediate-level/8.arquitectura_hexagonal/tests/infrastructure/contracts/: order_repository_contract.py
intermediate-level/acceso_datos_ORM/: acceso_datos_orm.md  app.db  pyproject.toml
intermediate-level/acceso_datos_ORM/alembic/versions/: cd8ed741213f_create_users_orders_order_items.py
intermediate-level/acceso_datos_ORM/src/acceso_datos_orm/: crud.py  models.py
(+20 files in other folders)
