[project]
name = "empaquetado-distribucion-cicd"
version = "0.1.0"
description = "Simple FastAPI lab for packaging, distribution and CI/CD"
authors = [
    {name = "cesarmunozocampoxD",email = "cesar_MunozOcampo@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
]

[tool.poetry]
packages = [{include = "empaquetado_distribucion_cicd", from = "src"}]

[tool.poetry.group.dev.dependencies]
ruff = ">=0.4.0"
mypy = ">=1.10.0"
pytest = ">=8.0.0"
pytest-cov = ">=5.0.0"
httpx = ">=0.27.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.12"
strict = true
