[project]
name = "cli-automatizacion"
version = "0.1.0"
description = ""
authors = [
    {name = "cesarmunozocampoxD",email = "cesar_MunozOcampo@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12",
    "requests>=2.32",
    "rich>=13",
]

[project.scripts]
orders = "cli_automatizacion:main"

[tool.poetry]
packages = [{include = "cli_automatizacion", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
