[project]
name = "seguridad-mantenimiento"
version = "0.1.0"
description = ""
authors = [
    {name = "cesarmunozocampoxD",email = "cesar_MunozOcampo@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "pydantic-settings>=2.0",
]

[tool.poetry]
packages = [{include = "seguridad_mantenimiento", from = "src"}]

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0"
pip-audit = ">=2.7"
safety = ">=3.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
