[project]
name = "http-apis"
version = "0.1.0"
description = ""
authors = [
    {name = "cesarmunozocampoxD",email = "cesar_MunozOcampo@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx[http2]>=0.27.0",
    "requests>=2.31.0"
]

[tool.poetry]
packages = [{include = "http_apis", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
