[project]
name = "estandar-es"
version = "0.1.0"
description = ""
authors = [
    {name = "cesarmunozocampoxD",email = "cesar_MunozOcampo@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
packages = [{include = "estandar_es", from = "src"}]

[tool.poetry.group.dev.dependencies]
black = "^24.0.0"
isort = "^5.13.0"
ruff = "^0.1.0"
pre-commit = "^4.5.1"
pyyaml = "^6.0.0"
logging = "^0.5.0"

[tool.pyright]
pythonVersion = "3.12"
include = ["src/**/*.py"]
typeCheckingMode = "basic"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
